5.0.1
 * Set executable flag for shell scripts in .build directory for source artifact (CASSANDRA-19896)
 * Throw ConfigurationException when commitlog_disk_access_mode is direct but direct IO is not supported by filesystem (CASSANDRA-19812)
 * Minor improvements in Cassandra shutdown and startup logs (CASSANDRA-19818)
 * Deprecate and ignore use_deterministic_table_id (CASSANDRA-19809)
 * Prioritize built indexes in IndexStatusManager (CASSANDRA-19400)
 * Add java.base/java.lang.reflect among opens for jvm11-client.options (CASSANDRA-19780)
Merged from 4.1:
Merged from 4.0:
 * Fix rendering UNSET collection types in query tracing (CASSANDRA-19880)
 * Fix latency reported by ideal consistency level monitoring (CASSANDRA-19651)
 * Do not spam log with SSLExceptions (CASSANDRA-18839)

5.0.0
5.0-rc2
 * Fix direct IO support always being evaluated to false upon the first start of a node (CASSANDRA-19779)
 * Memtable allocation type unslabbed_heap_buffers_logged will cause an assertion error for TrieMemtables and SegmentedTrieMemtables (CASSANDRA-19835)
Merged from 4.0:
 * Use default commitlog settings in test YAMLs (CASSANDRA-19830)


5.0-rc1
 * Move bcpkix-jdk18on to build dependencies, update to 1.78 and explicitly enumerate transitive dependencies (CASSANDRA-19739)
 * Avoid streams in the common case for UpdateTransaction creation (CASSANDRA-19675)
 * Only wait until native_transport_timeout for dispatcher to finish (CASSANDRA-19697)
 * Disable chronicle analytics (CASSANDRA-19656)
 * Replace Stream iteration with for-loop for StorageProxy::updateCoordinatorWriteLatencyTableMetric (CASSANDRA-19676)
 * Enforce metric naming contract if scope is used in a metric name (CASSANDRA-19619)
 * Avoid reading of the same IndexInfo from disk many times for a large partition (CASSANDRA-19557)
 * Resolve the oldest hints just from descriptors and current writer if available (CASSANDRA-19600)